@@ -54,7 +54,6 @@ if(check_FOUND)
 	addtest(path-search)
 	addtest(expand-vars)
 	addtest(expand-json)
-	addtest(json-locator)
 	addtest(wsapi)
 	addtest(afb-evt)
 	addtest(afb-rpc-coder)
