@@ -1,3 +1,9 @@
+next
+-------------
+
+  change
+   - remove references to json-locator
+
 Version 5.0.13
 --------------
 
